<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/main_group" android:checkableBehavior="single">
        <item
		android:id="@+id/action_home"
		android:icon="@drawable/ic_home_24dp"
		android:title="@string/home"/>

        <item
		android:id="@+id/action_notifications"
		android:icon="@drawable/ic_notifications_black_24dp"
		android:title="@string/notifications"/>

        <item
		android:id="@+id/action_my_donations"
		android:icon="@drawable/ic_my_donations_black_24dp"
		android:title="@string/my_donations"/>

	</group>

	<group android:id="@+id/sub_group" android:checkableBehavior="none">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings"/>

	<item
		android:id="@+id/action_logout"
		android:icon="@drawable/ic_logout_24dp"
		android:title="@string/logout"/>

	</group>

</menu>