<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scroll_registratation"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.help.childin.ui.activity.DonorActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_registratation"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_register"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.help.childin.ui.activity.DonorActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:visibility="gone"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/childin_logo"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <Button
                android:id="@+id/gender"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edittext"
                android:gravity="left|center"
                android:hint="@string/hint_gender"
                android:padding="10dp"
                android:textColor="@color/input_register" />

            <Button
                android:id="@+id/dob"
                android:layout_width="fill_parent"

                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edittext"
                android:gravity="left|center"
                android:hint="@string/hint_dob"
                android:padding="10dp"
                android:text="13/11/2016"
                android:textColor="@color/input_register" />

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"

                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_address"
                android:inputType="textEmailAddress"
                android:maxLines="2"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="fill_parent"

                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_mobileno"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"

                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"

                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="5"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />


            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="10dip"
                android:background="@drawable/bg_button_gray"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnLinkToDonateScreen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="5dip"
                android:background="@drawable/bg_button_blue"
                android:text="@string/btn_link_to_donate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="match_parent"

                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="5dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
