<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registratation"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    tools:context="com.help.childin.ui.activity.Registration">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/childin_logo"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="5"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <!-- Login Button -->


        <!-- Link to Login Screen -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button_gray"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/btnLinkToDonateScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button_blue"
                android:text="@string/btn_link_to_donate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:visibility="visible" />
        </LinearLayout>


        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

    </LinearLayout>


</RelativeLayout>
