<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp">
                <TextView
                    android:id="@+id/txt_call_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/textsize1"
                    android:padding="10dp"
                    android:text="@string/we_will_call_you"
                    android:textStyle="bold"/>

    </android.support.v7.widget.CardView>

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:padding="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/enter_mobile"/>

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/btn_send_request"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:textColor="@color/white"
                    android:text="Send Request"/>

            </LinearLayout>

